[package]
name = "jwt-grpc"
version = "0.1.0"
edition = "2021"
# server binary
[[bin]]
    name = "server"
    path = "./src/server.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
jsonwebtoken = "9.1.0"
prost = "0.12.1"
redis = "0.23.3"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.8.0"
log = "0.4.20"
env_logger = "0.10.0"
pretty_env_logger = "0.5.0"

[build-dependencies]
tonic-build = "0.10.2"
